# simpleSerever

./: CMakeLists.txt  README.md  mainClient.cpp  mainServer.cpp
include/: server.h
source/: server.cpp
